k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: pack-coffee
spec:
  selector:
    app: pack-coffee
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: mijung-noodles
spec:
  selector:
    app: mijung-noodles
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hongkong-banjeom
spec:
  selector:
    app: hongkong-banjeom
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 8080
