k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes
spec:
  ingressClassName: nginx
  rules:
    - host: app.127.0.0.1.sslip.io
      http:
        paths:
          - backend:
              service:
                name: pack-coffee
                port:
                  name: tcp
            pathType: Prefix
            path: /api/menu
          - backend:
              service:
                name: mijung-noodles
                port:
                  name: tcp
            pathType: Prefix
            path: /api/order
          - backend:
              service:
                name: hongkong-banjeom
                port:
                  name: tcp
            pathType: Prefix
            path: /api/coupon
